# rs-quoracle

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  SOLVERS.md  book.toml  build.rs  deny.toml  flake.nix
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  docs.yml
agent/: CHANGELOG.md  COMPARISON.md  COMPILER_FIXES.md  FIXES_SUMMARY.md  IMPROVEMENTS.md  NIX_FLAKE_FIX.md  PERFORMANCE.md  READY_TO_USE.md  SOLVER_IMPL_STATUS.md  VERIFICATION.md
benches/: benchmarks.rs
docs/: README.md
docs/src/: SUMMARY.md  api.md  examples.md  introduction.md  performance.md  quick-start.md
examples/: search.rs  simple.rs  tutorial.rs
src/: distribution.rs  error.rs  expr.rs  geometry.rs  lib.rs  lp.rs  quorum_system.rs  search.rs  solver.rs
tests/: expr_tests.rs
